@@ -1036,7 +1036,8 @@ cgraph_emit_thunks (void)
 	 emitted, but we cannot know that until the inliner and other
 	 IPA passes have run (see the sequencing of the call to
 	 cgraph_mark_functions_to_output in cgraph_optimize).  */
-      if (!DECL_EXTERNAL (n->decl))
+      if (n->reachable
+	  && !DECL_EXTERNAL (n->decl))
 	lang_hooks.callgraph.emit_associated_thunks (n->decl);
     }
 }
@@ -1047,19 +1048,20 @@ cgraph_emit_thunks (void)
 void
 cgraph_finalize_compilation_unit (void)
 {
+  timevar_push (TV_CGRAPH);
+
   /* Do not skip analyzing the functions if there were errors, we
      miss diagnostics for following functions otherwise.  */
 
   /* Emit size functions we didn't inline.  */
   finalize_size_functions ();
 
-  /* Emit thunks, if needed.  */
-  if (lang_hooks.callgraph.emit_associated_thunks)
-    cgraph_emit_thunks ();
-
   /* Call functions declared with the "constructor" or "destructor"
      attribute.  */
   cgraph_build_cdtor_fns ();
+
+  /* Mark alias targets necessary and emit diagnostics.  */
+  finish_aliases_1 ();
 
   if (!quiet_flag)
     {
@@ -1067,15 +1069,24 @@ cgraph_finalize_compilation_unit (void)
       fflush (stderr);
     }
 
+  /* Gimplify and lower all functions, compute reachability and
+     remove unreachable nodes.  */
+  cgraph_analyze_functions ();
+
+  /* Emit thunks for reachable nodes, if needed.  */
+  if (lang_hooks.callgraph.emit_associated_thunks)
+    cgraph_emit_thunks ();
+
   /* Mark alias targets necessary and emit diagnostics.  */
   finish_aliases_1 ();
 
-  /* Gimplify and lower all functions.  */
-  timevar_push (TV_CGRAPH);
+  /* Gimplify and lower thunks.  */
   cgraph_analyze_functions ();
-  timevar_pop (TV_CGRAPH);
 
+  /* Finally drive the pass manager.  */
   cgraph_optimize ();
+
+  timevar_pop (TV_CGRAPH);
 }
 
 
